AuthController: Changed return from Responseentity to AuthenticationResponse AuthService: Changed return from Responseentity to AuthenticationResponse AuthServiecImpl: Changed response from string to AuthenticationResponse, added different erroer/wrong flows. EmailUtility: Added MimMmessageHelper to format mail in html format